      - control-interpreter-in-usr-local (split from
         interpreter-in-usr-local)
      - control-interpreter-without-depends
      - copyright-refers-to-bad-php-license
      - copyright-refers-to-problematic-php-license
      - copyright-with-old-dh-make-debian-copyright
      - desktop-mimetype-without-update-call
      - forbidden-postrm-interpreter
      - preinst-interpreter-without-predepends
      - script-calls-init-script-directly
      - unknown-control-interpreter (split from unusual-interpreter)
      - version-refers-to-distribution
    + Removed
      - desktop-file-but-no-dh_desktop-call
      - interpreter-without-predep

  * checks/changelog-file{,.desc}:
    + [RA] Warn of Debian version numbers containing "testing", "stable",
      or "unstable", or with release code names for uploads not targeted
      at that release, except in NMUs.  Based on a patch by Raphael
      Geissert.  (Closes: #498876)
  * checks/control-file{,.desc}:
    + [RA] Warn (severity: wishlist) of binary control stanzas duplicating
      fields of the source control stanza.  (Closes: #497348)
  * checks/copyright-file{,.desc}:
    + [RA] Warn (severity: wishlist) about the old dh_make packaging
      copyright, which used (C) without the word or symbol.  Based on a
      patch by Raphael Geissert.  (Closes: #497347)
    + [RA] Clean up checks of a symlinked /usr/share/doc directory and
      avoid making package info global.
    + [RA] Warn about older PHP licenses.  Based on a patch by Raphael
      Geissert.  (Closes: #498875)
  * checks/cruft:
    + [RA] Keep the hash of files for which warnings were already issued
      local to each package, reducing memory consumption and false
      negatives for archive-wide runs.
  * checks/debhelper{,.desc}:
    + [RA] Check for use of shell brace expansion in debhelper config
      files that list filenames, which is not supported.  Based on a patch
      from Raphael Geissert.  (Closes: #480939)