@@ -1,0 +1,8 @@
+Testname: files-games-section
+Section: games
+Version: 1.0
+Description: Correct section for games packages
+Test-For:
+ games-package-should-be-section-games
+ package-section-games-but-contains-no-game
+ package-section-games-but-has-usr-bin
