@@ -1,0 +1,2 @@
+shell-blaster usr/bin
+shell-blaster usr/games
