@@ -1,0 +1,1 @@
+shell-blaster usr/games
