@@ -1,0 +1,8 @@
+.TH SHELL-BLASTER 6 "2008-12-30"
+.SH "NAME"
+shell\-blaster \- A simple shell non\-game
+.SH "SYNOPSIS"
+.B shell\-blaster
+.SH "DESCRIPTION"
+.B shell\-blaster
+wants to be a game but isn't yet.
